<resources>
    <string name="app_name">TrailBlitz</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="need_an_account">Need an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="trailblitz_login">TrailBlitz Login</string>
    <string name="welcome">Welcome!</string>
    <string name="showusername">showUsername</string>
    <string name="inventory">Inventory</string>
    <string name="cart">Cart</string>
    <string name="past_orders">Past Orders</string>
    <string name="update_password">Update Password</string>
    <string name="admin_controls">Admin Controls</string>
    <string name="sign_out">Sign Out</string>
    <string name="order_history">Order History</string>
    <string name="logout">Would you like to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_up_header">Sign Up</string>
    <string name="username_prompt">Username</string>
    <string name="password2_prompt">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="password1_prompt">Password</string>
    <string name="back">Back</string>
    <string name="delete_user">Delete User</string>
    <string name="add_user">Add User</string>
    <string name="admin_controls_title">Admin Controls</string>
    <string name="item_controls">Item Controls</string>
    <string name="back_from_admin">Back</string>
    <string name="backFromDelete">Back</string>
    <string name="delete_user_button">Delete User</string>
    <string name="users">Users</string>
    <string name="usernameFromDelete">Username</string>
    <string name="no_users">No users</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="quantity">Quantity</string>
    <string name="back1">Back</string>
    <string name="inventory1">Inventory</string>
    <string name="item">Item</string>
    <string name="item_controls1">Item Controls</string>
    <string name="add_item">Add Item</string>
    <string name="update_price">Update Price</string>
    <string name="update_quantity">Update Quantity</string>
    <string name="back2">Back</string>
    <string name="add_product">Add Product</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="quantity1">Quantity</string>
    <string name="add_to_inventory">Add to Inventory</string>
    <string name="back3">Back</string>
    <string name="update_item">Update Item</string>
    <string name="textPrice">Price</string>
    <string name="update_item1">Update Item</string>
    <string name="update_password1">Update Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="new_password">New Password</string>
    <string name="back4">Back</string>
    <string name="update_password2">Update Password</string>
    <string name="new_password2">New Password</string>
    <string name="repeat_new_password1">Repeat New Password</string>
    <string name="quantity2">Quantity</string>
    <string name="item2">Item</string>
    <string name="price1">Price</string>
    <string name="cart1">Cart</string>
    <string name="update_cart">Update Cart</string>
    <string name="total">Total:</string>
    <string name="checkout">Checkout</string>
    <string name="back5">Back</string>
    <string name="item9">Item</string>
    <string name="quantity4">Quantity</string>
    <string name="item_name2">Item Name</string>
    <string name="remove_item">Remove Item</string>
    <string name="price2">Price</string>
    <string name="past_orders1">Past Orders</string>
    <string name="order1">Order</string>
    <string name="item4">Item</string>
    <string name="quantity3">Quantity</string>
    <string name="cost3">Cost</string>
    <string name="textview3">TextView</string>
</resources>