<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">


  <TextView
      android:id="@+id/textViewAddProduct"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="160dp"
      android:fontFamily="sans-serif-thin"
      android:text="@string/add_product"
      android:textSize="60sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/editTextEntryProduct"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="76dp"
      android:ems="10"
      android:hint="@string/item_name"
      android:inputType="text"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewAddProduct" />

  <EditText
      android:id="@+id/editTextPrice"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="36dp"
      android:ems="10"
      android:hint="@string/price"
      android:inputType="text"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextEntryProduct" />

  <EditText
      android:id="@+id/editTextQuan"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="36dp"
      android:ems="10"
      android:hint="@string/quantity1"
      android:inputType="text"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />

  <Button
      android:id="@+id/buttonAdd"
      android:layout_width="300dp"
      android:layout_height="75dp"
      android:layout_marginTop="80dp"
      android:layout_marginBottom="24dp"
      android:backgroundTint="@color/green"
      android:text="@string/add_to_inventory"
      android:textSize="15sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextQuan" />

  <Button
      android:id="@+id/buttonProBack"
      android:layout_width="80dp"
      android:layout_height="80dp"
      android:layout_marginTop="60dp"
      android:backgroundTint="@color/green"
      android:text="@string/back3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.902"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>