<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <TextView
        android:id="@+id/textViewAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/admin_controls_title"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAddUser"
        android:backgroundTint="@color/green"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="52dp"
        android:text="@string/add_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdmin" />

    <Button
        android:id="@+id/buttonDeleteUser"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/green"
        android:text="@string/delete_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddUser" />

    <Button
        android:id="@+id/buttonItemControls"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="52dp"
        android:text="@string/item_controls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/buttonDeleteUser" />

    <Button
        android:id="@+id/buttonAdminBack"
        android:backgroundTint="@color/green"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="120dp"
        android:text="@string/back_from_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonItemControls" />
</androidx.constraintlayout.widget.ConstraintLayout>